[package]
name = "pyrocord_route_derive"
version = "0.1.0"
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
lazy_static = "1.4.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
regex = "1"

[lib]
proc-macro = true